--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,11 +1,3 @@
-.app-container img {
-    /* Ensure the image fits within the container */
-    width: 50%;
-    height: auto;
-    /* Other image styles */
-}
-
-
 .Header-input {
     padding: 20px;
 }
@@ -17,18 +9,22 @@
 .Body-card {
     background-color: beige;
     padding: 10px;
+
     h1 {
-        font-size: 22px; /* 폰트 사이즈를 원하는 크기로 조절하세요 */
+        font-size: 22px;
+        /* 폰트 사이즈를 원하는 크기로 조절하세요 */
         /* background-color:  yellow; */
         display: inline-block;
-        border-radius:3px;
-        box-shadow: inset 0px -0.5em 0 0 rgba(247, 243, 0, 0.826); /* 형광펜 두께 조절 */
-      }
+        border-radius: 3px;
+        box-shadow: inset 0px -0.5em 0 0 rgba(247, 243, 0, 0.826);
+        /* 형광펜 두께 조절 */
+    }
 
     a {
-        font-size:15px;
-        
+        font-size: 15px;
+
     }
+
     div {
         font-size: 15px;
     }
@@ -37,9 +33,7 @@
         display: -webkit-box;
         -webkit-box-orient: vertical;
         overflow: hidden;
-        -webkit-line-clamp: 1; /* 최대 2줄까지 표시 */
+        -webkit-line-clamp: 1;
+        /* 최대 2줄까지 표시 */
     }
 }
-
-
-
